# Volatile

./: README.md  meson.build
data/: com.github.navaneethp123.volatile.appdata.xml  com.github.navaneethp123.volatile.desktop.in.in  gschema.xml  gtksourceview-dark.xml  meson.build
meson/: post_install.py
src/: Application.vala  Settings.vala  Window.vala  meson.build
src/Services/: FileRoutines.vala  Path.vala  System.vala
src/Widgets/: Notebook.vala
src/Widgets/Dialogs/: Dialog.vala  FileChooser.vala  SaveDialog.vala
src/Widgets/Tab/: IOPane.vala  Tab.vala
src/Widgets/Tab/SourceView/: BracketsCompletion.vala  CommentToggler.vala  SnippetInserter.vala  SourceView.vala
